2015-05-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/FetchDump.pm: Do not pass a changer
	* perl/Amanda/Recovery/Planner.pm (make_plan): Accept storage instead
	  of changer
	* perl/Amanda/Vault.pm: Use src_storage_name and dest_storage_name
	* server-src/amvault.pl: Add --src-storage and --dest-storage
	  arguments
	* man/xml-source/amvault.8.xml: Document --src-storage and
	  --dest-storage
	* installcheck/Amanda_Recovery_Planner.pl: Fix for new api

2015-05-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm: Parse 'requeue write' line, set storage
	  will_retry.
	* server-src/driver.c: Write 'requeue write' line.
	* server-src/driver.c: Fix vaulting.
	* server-src/driverio.c (startup_dump_tape_process,
	  startup_vault_tape_process): New function to replace
	   startup_tape_process.
	* server-src/driverio.h (startup_dump_tape_process,
	  startup_vault_tape_process): Add prototype.
	* installcheck/Amanda_Rest_Runs.pl: Add 'will_retry' in status result.
	* installcheck/Installcheck/Dumpcache.pm: Force level when doing
	  backup.

2015-05-12  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amgetconf.pl: Do not load the disklist if a config is not
	  set.
	* common-src/conffile.c: load the cwd amanda.conf only if it exist.

2015-05-11  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Rest/Amanda/config.yml: Remove Dancer2 setting.

2015-05-11  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Makefile.am: Typo

2015-05-11  Jean-Louis Martineau <martineau@zmanda.com>
	* config/automake/scripts.am: Fix checking SCRIPTS_PERL_NO_CHECK.
	* perl/Makefile.am (SCRIPTS_PERL_NO_CHECK): Add Amanda/Rest.pm

2015-05-11  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Rest.pm: Remove
	* perl/Amanda/Rest.pm.in: Server for Dancer2
	* perl/Amanda/Rest/Amanda/bin/app-dancer2.pl.in: Start script for
	  using Dancer2
	* perl/Amanda/Rest/Amanda/config.yml: Add config for Dancer2