@@ -95,7 +95,8 @@ typedef enum {
     CONF_REPORT_USE_MEDIA,     CONF_REPORT_NEXT_MEDIA,	CONF_REPORT_FORMAT,
     CONF_RETRY_DUMP,	       CONF_TAPEPOOL,
     CONF_POLICY,               CONF_STORAGE,		CONF_VAULT_STORAGE,
-    CONF_CMDFILE,              CONF_REST_API_PORT,
+    CONF_CMDFILE,              CONF_REST_API_PORT,	CONF_REST_SSL_CERT,
+    CONF_REST_SSL_KEY,
 
     /* storage setting */
     CONF_SET_NO_REUSE,	       CONF_ERASE_VOLUME,
@@ -1151,6 +1152,8 @@ keytab_t server_keytab[] = {
     { "RESERVED_UDP_PORT", CONF_RESERVED_UDP_PORT },
     { "RESERVED_TCP_PORT", CONF_RESERVED_TCP_PORT },
     { "REST_API_PORT", CONF_REST_API_PORT },
+    { "REST_SSL_CERT", CONF_REST_SSL_CERT },
+    { "REST_SSL_KEY", CONF_REST_SSL_KEY },
     { "RETRY_DUMP", CONF_RETRY_DUMP },
     { "RETENTION_DAYS", CONF_RETENTION_DAYS },
     { "RETENTION_FULL", CONF_RETENTION_FULL },
@@ -1431,6 +1434,8 @@ conf_var_t server_var [] = {
    { CONF_VAULT_STORAGE        , CONFTYPE_IDENTLIST, read_storage_identlist, CNF_VAULT_STORAGE        , NULL },
    { CONF_CMDFILE              , CONFTYPE_STR      , read_str         , CNF_CMDFILE              , NULL },
    { CONF_REST_API_PORT        , CONFTYPE_INT      , read_int         , CNF_REST_API_PORT        , validate_positive },
+   { CONF_REST_SSL_CERT        , CONFTYPE_STR      , read_str         , CNF_REST_SSL_CERT        , NULL },
+   { CONF_REST_SSL_KEY         , CONFTYPE_STR      , read_str         , CNF_REST_SSL_KEY         , NULL },
    { CONF_COMPRESS_INDEX       , CONFTYPE_BOOLEAN  , read_bool        , CNF_COMPRESS_INDEX       , NULL },
    { CONF_SORT_INDEX           , CONFTYPE_BOOLEAN  , read_bool        , CNF_SORT_INDEX           , NULL },
    { CONF_UNKNOWN              , CONFTYPE_INT      , NULL             , CNF_CNF                  , NULL }
@@ -6159,6 +6164,8 @@ init_defaults(
     conf_init_identlist(&conf_data[CNF_VAULT_STORAGE]        , NULL);
     conf_init_str      (&conf_data[CNF_CMDFILE]              , "command_file");
     conf_init_int      (&conf_data[CNF_REST_API_PORT]        , CONF_UNIT_NONE, 0);
+    conf_init_str      (&conf_data[CNF_REST_SSL_CERT]        , NULL);
+    conf_init_str      (&conf_data[CNF_REST_SSL_KEY]         , NULL);
     conf_init_bool     (&conf_data[CNF_USETIMESTAMPS]        , 1);
     conf_init_int      (&conf_data[CNF_CONNECT_TRIES]        , CONF_UNIT_NONE, 3);
     conf_init_int      (&conf_data[CNF_REP_TRIES]            , CONF_UNIT_NONE, 5);
