@@ -551,6 +551,8 @@ typedef enum {
     CNF_COMPRESS_INDEX,
     CNF_SORT_INDEX,
     CNF_REST_API_PORT,
+    CNF_REST_SSL_CERT,
+    CNF_REST_SSL_KEY,
     CNF_CNF /* sentinel */
 } confparm_key;
 
