@@ -155,6 +155,8 @@ APPLY(CNF_STORAGE) \
 APPLY(CNF_VAULT_STORAGE) \
 APPLY(CNF_CMDFILE) \
 APPLY(CNF_REST_API_PORT) \
+APPLY(CNF_REST_SSL_CERT) \
+APPLY(CNF_REST_SSL_KEY) \
 APPLY(CNF_COMPRESS_INDEX) \
 APPLY(CNF_SORT_INDEX)
 
